--- a/miApp/src/app/app.component.html
+++ b/miApp/src/app/app.component.html
@@ -4,4 +4,6 @@
   <li><h3>Nombre: {{nombre}}</h3></li>
   <li><h3>Apellido: {{apellido}}</h3></li>
 </ul>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
+<app-listado></app-listado>
